force-app/main/default/objects/External_Site_Setting__mdt/External_Site_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Holds settings for Site base url and default user configuration</description>
    <label>External Site Setting</label>
    <pluralLabel>External Site Settings</pluralLabel>
</CustomObject>