force-app/main/default/objects/External_Site_Setting__mdt/fields/Hour_Offset_from_GMT__c.field-meta.xml
<CustomField>
    <fullName>Hour_Offset_from_GMT__c</fullName>
    <label>Hour Offset from GMT</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>