force-app/main/default/objects/External_Site_Setting__mdt/fields/Permission_Sets_to_Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>Permission_Sets_to_Auto_Assign__c</fullName>
    <description>A comma-separated list of Permission Set API Names to auto-assign to new users (e.g. External_User_Base_Access)</description>
    <inlineHelpText>A comma-separated list of Permission Set API Names to auto-assign to new users (e.g. External_User_Base_Access)</inlineHelpText>
    <label>Permission Sets to Auto Assign</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>