force-app/main/default/objects/External_Site_Setting__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <description>The Name of the Profile for new users of this Site</description>
    <inlineHelpText>The Name of the Profile for new users of this Site</inlineHelpText>
    <label>Profile Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>