force-app/main/default/objects/External_Site_Setting__mdt/fields/Registration_Page_Path__c.field-meta.xml
<CustomField>
    <fullName>Registration_Page_Path__c</fullName>
    <description>The relative path to the registration page (e.g. /s/registration)</description>
    <inlineHelpText>The relative path to the registration page (e.g. /s/registration)</inlineHelpText>
    <label>Registration Page Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>