force-app/main/default/objects/External_Site_Setting__mdt/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <description>The Network Name of this Experience Cloud Site</description>
    <inlineHelpText>The Network Name of this Experience Cloud Site</inlineHelpText>
    <label>Site Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>