force-app/main/default/objects/External_Site_Setting__mdt/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <description>The base URL for the Experience Cloud Site this setting corresponds to (e.g. https://myorg-onlineportal.cs203.force.com)</description>
    <inlineHelpText>The base URL for the Experience Cloud Site this setting corresponds to (e.g. https://myorg-onlineportal.cs203.force.com)</inlineHelpText>
    <label>Site URL</label>
    <type>Url</type>
</CustomField>